# direct_storage_vk_example

./: .gitignore  CMakeLists.txt  LICENSE  README.md
shaders/: compile_shaders.bat  example.frag.glsl  example.vert.glsl
src/: main.cpp
